--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "buffer-replace": "^1.0.0",
-    "colors": "^1.4.0"
+    "colors": "^1.4.0",
+    "commander": "^4.1.0"
   }
 }
