--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "buffer-replace": "^1.0.0",
     "colors": "^1.4.0",
-    "commander": "^4.1.0"
+    "commander": "^4.1.0",
+    "prompts": "^2.3.0"
   }
 }
